# EV_BATTER_FINAL

./: .gitignore  FIXES_APPLIED.md  GENERATION_SUMMARY.md  QUICK_START.md  README.md  SERVICE_STATUS.md  TECH_STACK.md  TROUBLESHOOTING.md  create_dashboard.py  docker-compose.yml  fix_dashboard.py  pyproject.toml  requirements.txt  startup.ps1
infra/: create_telemetry_table.sql
infra/grafana/provisioning/dashboards/: dashboard.yml  dashboards.yaml  ev-battery-dashboard.json  ev_digital_twin.json
infra/grafana/provisioning/datasources/: datasources.yaml  postgres.yaml
infra/mlflow/: .gitkeep
infra/prometheus/: prometheus.yml
models/: .gitkeep
notebooks/: NEGATIVE_R2_SOLUTION.md  NOTEBOOK_FIXES.md  QUICK_FIX.md  train_ev_models.ipynb  train_ev_models_fixed.ipynb
src/: __init__.py
src/common/: __init__.py  utils.py
src/inference/: __init__.py  live_predictor.py
src/models/: __init__.py  train.py
src/simulator/: __init__.py  publisher.py
tests/: test_smoke.py
