# pyproject.toml - EV Digital Twin Project Configuration
[project]
name = "ev-digital-twin"
version = "1.0.0"
description = "End-to-end EV battery digital twin with telemetry simulation, ML predictions, and real-time monitoring"
authors = [{name = "EV Digital Twin Team"}]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "paho-mqtt>=1.6.0",
    "kafka-python>=2.0.0",
    "prometheus-client>=0.18.0",
    "mlflow>=2.9.0",
    "pyyaml>=6.0",
    "Flask>=3.0.0",
    "boto3>=1.28.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
